manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: taco-cloud
    app.kubernetes.io/component: taco-cloud
    app.kubernetes.io/instance: taco-cloud
    app.kubernetes.io/part-of: taco-cloud-app
    app.openshift.io/runtime-version: 162933a05bfbf67ba021a330b508d6767cc0f9dd
  name: taco-cloud
  namespace: gitops-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: taco-cloud
    deploymentconfig: taco-cloud
